--- a/package.json
+++ b/package.json
@@ -8,34 +8,43 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fullcalendar/core": "^4.2.0",
-    "@fullcalendar/daygrid": "^4.2.0",
-    "@fullcalendar/interaction": "^4.2.0",
-    "@fullcalendar/timegrid": "^4.2.0",
-    "@fullcalendar/vue": "^4.2.2",
-    "core-js": "^2.6.5",
-    "firebase": "^6.0.2",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@fullcalendar/vue": "^4.3.1",
+    "@js-joda/core": "^1.12.0",
+    "core-js": "^2.6.10",
+    "firebase": "^6.6.2",
+    "moment": "^2.24.0",
     "native-toast": "^2.0.0",
     "register-service-worker": "^1.6.2",
-    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.1.9",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.7.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-plugin-pwa": "^3.1.1",
-    "@vue/cli-service": "^3.1.1",
+    "@mdi/font": "^4.5.95",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "stylus": "^0.54.5",
+    "eslint-plugin-vue": "^5.2.3",
+    "fibers": "^4.0.2",
+    "material-design-icons-iconfont": "^5.0.1",
+    "sass": "^1.23.3",
+    "sass-loader": "^7.3.1",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.3.0"
   }
 }
