--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@js-joda/core": "^1.12.0",
     "core-js": "^2.6.10",
     "firebase": "^6.6.2",
+    "firestore-export-import": "^0.8.0",
     "moment": "^2.24.0",
     "native-toast": "^2.0.0",
     "register-service-worker": "^1.6.2",
